--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -132,7 +132,7 @@
           <div class="portrait">
             <img src="images/idrisi.jpg" data-original="https://upload.wikimedia.org/wikipedia/commons/5/5f/Al-Idrisi.jpg" alt="Al-Idrisi portrait (placeholder)">
           </div>
-          <figcaption class="figure-caption">Al-Idrisi<br/><small class="muted">1100–1165</small></figcaption>
+          <figcaption class="figure-caption">Al-Idrisi<br/><small class="muted">1100 - 1165</small></figcaption>
         </figure>
         <div>
           <h3>Al-Idrisi</h3>
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
